Fail compilation when QtGraphs in the same TU

Because QtGraphs has inherited many of its classes
from QtCharts, the modules have many classes with the same
name. Therefore, mixing QtCharts and QtGraphs headers in
the same TU violates ODR. This patch includes the check for that and
fails compilation with an error message.

Pick-to: 6.8
Fixes: QTBUG-135691
Change-Id: Ic612ec36b1369ceee0eef83220c41e75f38a611e
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
(cherry picked from commit 5a7ad3e526b7f585cf52b978f4a3e19268a418bd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>